# dataCollector

./: .gitignore  CMakeLists.txt  README.md
collectImages/: CMakeLists.txt  FlyCapAPI.hpp  collectImages.cpp
collectImages/TEST/: flyTest.cpp
collectInertial/: CMakeLists.txt  IMU_initialization.cpp  collectInertial.cpp  inertialDevice.hpp  messageDef.hpp  parsingIMU.cpp
collectLaser/: CMakeLists.txt  collectLaser.cpp  parsingLaserData.cpp
common/: common.cpp  common.hpp
hardware/board/: README.md
scripts/: checkNet.py  install  launch  release  vlp16
third_parties/NmeaTode/: CMakeLists.txt  README.md
third_parties/NmeaTode/TEST/: nmea_test.cpp
third_parties/VelodyneHDL/: CMakeLists.txt
third_parties/serial/: CMakeLists.txt  README.md
third_parties/serial/TEST/: serial_example.cc
timeSychron/: CMakeLists.txt  forgeNMEA.hpp  gpioOprations.hpp  timeSychron.cpp
timeSychronArdu/: CMakeLists.txt  arduCommunicator.cpp  arduCommunicator.h  timeSychronArdu.cpp
